Fixed word-wrapping

--- a/src/app/components/home/homeStyles.scss
+++ b/src/app/components/home/homeStyles.scss
@@ -106,7 +106,7 @@ body, html {
 }
 
 .weather {
-	font-size: 2em;
+	font-size: 2.3rem;
 	font-weight: lighter;
 	padding: 0;
 	position: relative;
