--- a/src/app/shared/currentWeather/currentWeatherStyles.scss
+++ b/src/app/shared/currentWeather/currentWeatherStyles.scss
@@ -49,7 +49,7 @@
 
 .weather {
 	bottom: 6vh;
-	font-size: 2.25em;
+	font-size: 2.73rem;
 	padding: 0;
 	position: relative;
 	text-transform: capitalize;
